# chatbot

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: bot.json
scripts/: query_rag.py
src/vista_chatbot/: bm25.py  chunking.py  config.py  llm.py  logging_utils.py  retriever.py  runtime.py
tests/: test_bm25.py  test_kid_questions_eval.py  test_llm.py  test_retriever_extractive.py  test_retriever_hybrid.py  test_retriever_table.py  test_runtime.py
